[package]
name = "gabriel2"
version = "0.0.1"
edition = "2021"

authors = ["Evgeny Igumnov <igumnovnsk@gmail.com>"]
repository = "https://github.com/igumnoff/gabriel2"
documentation = "https://docs.rs/gabriel2"
license-file = "LICENSE"
keywords = []
categories = []
readme = "README.md"
description = "Gabriel2 library"




[dependencies]
anyhow = "1.0.75"
thiserror = "1.0.44"

[dev-dependencies]
env_logger = "0.10.0"
