[package]
name = "gabriel2"
version = "1.0.1"
edition = "2021"

authors = ["Evgeny Igumnov <igumnovnsk@gmail.com>"]
repository = "https://github.com/igumnoff/gabriel2"
documentation = "https://docs.rs/gabriel2"
license-file = "../LICENSE"
keywords = ["actor"]
categories = ["concurrency"]
readme = "../README.md"
description = "Gabriel2: Indeed, an actor library, not a framework, written in Rust"






[dependencies]
futures = "0.3.26"
async-trait = "0.1.73"
log = "0.4.17"

tokio = { version = "1.25.0", features = ["full"] }

