[package]
name = "gabriel2"
version = "1.4.3"
edition = "2021"

authors = ["Evgeny Igumnov <igumnovnsk@gmail.com>"]
repository = "https://github.com/igumnoff/gabriel2"
documentation = "https://docs.rs/gabriel2"
license-file = "../LICENSE"
keywords = ["actor"]
categories = ["concurrency"]
readme = "../README.md"
description = "Gabriel2: Indeed, an actor library based on Tokio, written in Rust"


[dependencies]
futures = "0.3.26"
log = "0.4.17"
tokio = { version = "1.25.0", optional = true }
bincode = { version = "2.0.0-rc.3", optional = true }
async-stream = "0.3.5"
dashmap = "6.0.1"
[package.metadata.docs.rs]
features = ["remote", "broadcast", "sink-stream"]

[features]
default = ["all"]
all = ["remote", "sink-stream", "broadcast", "tokio/io-util", "tokio/sync", "tokio/rt", "tokio/rt-multi-thread", "tokio/macros", "tokio/tokio-macros", "tokio/signal", "tokio/time"]
remote = ["tokio/net", "bincode"]
sink-stream = []
broadcast = []
