[package]
name = "test"
version = "0.1.0"
edition = "2021"
publish = false


[dependencies]
gabriel2 = {path = "../lib"}
futures = "0.3.26"

env_logger = "0.10.0"
log = "0.4.17"

tokio = { version = "1.25.0", features = ["full"] }
async-trait = "0.1.73"
thiserror = "1.0.44"
anyhow = "1.0.75"

bincode = { version = "2.0.0-rc.3" }

derive_more = "0.99.17"
